--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "hardhat": "^2.12.1"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^2.0.0"
+    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+    "dotenv": "^16.0.3"
   }
 }
