--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "hardhat": "^2.12.2"
   },
   "devDependencies": {
+    "@axelar-network/axelar-gmp-sdk-solidity": "^2.0.0",
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "@openzeppelin/contracts": "^4.8.0",
     "dotenv": "^16.0.3"
